--- a/admin/index.html
+++ b/admin/index.html
@@ -38,128 +38,401 @@
     <h1>TripStack Admin</h1>
   </header>
 
-  <main>
-    <!-- Trip Management -->
+  <!-- Settings bar -->
+  <section class="card" style="margin:16px">
+    <h2>Settings</h2>
+    <div class="row">
+      <div>
+        <label>API base URL</label>
+        <input id="cfgApi" placeholder="https://your-worker.youracc.workers.dev" />
+      </div>
+      <div>
+        <label>Admin Token</label>
+        <input id="cfgToken" placeholder="paste your ADMIN_TOKEN" />
+      </div>
+    </div>
+    <button id="saveCfgBtn">Save</button>
+    <span id="cfgMsg" class="muted"></span>
+  </section>
+
+  <!-- Tabs -->
+  <div style="display:flex; gap:8px; padding:0 16px 8px 16px">
+    <button class="tabBtn" data-tab="trips">Trips</button>
+    <button class="tabBtn" data-tab="payments">Payments</button>
+    <button class="tabBtn" data-tab="socials">Socials</button>
+  </div>
+
+  <main id="tab-trips" style="display:block">
+    <!-- Trips -->
     <section class="card">
-      <h2>Trips</h2>
-      <label>Trip Title</label>
-      <input id="tripTitle" placeholder="e.g. Caribbean Cruise Adventure" />
+      <h2>Create Trip</h2>
+      <div class="row">
+        <div>
+          <label>Group ID</label>
+          <input id="tripGroupId" placeholder="e.g. g1" />
+        </div>
+        <div>
+          <label>Title</label>
+          <input id="tripTitle" placeholder="e.g. Caribbean Cruise Adventure" />
+        </div>
+      </div>
+      <div class="row">
+        <div>
+          <label>Start Date</label>
+          <input id="tripStart" type="date" />
+        </div>
+        <div>
+          <label>End Date</label>
+          <input id="tripEnd" type="date" />
+        </div>
+      </div>
+      <label>Notes</label>
+      <textarea id="tripNotes" placeholder="Extra info for your travelers…"></textarea>
 
-      <label>Start Date</label>
-      <input id="tripStart" type="date" />
-
-      <label>End Date</label>
-      <input id="tripEnd" type="date" />
-
+      <!-- Optional flags; safe if your DB has these columns (has_cruise/has_flights/has_hotel/has_all_inclusive/is_public) -->
       <div class="row">
         <label><input type="checkbox" id="tripCruise" /> Cruise</label>
         <label><input type="checkbox" id="tripFlights" /> Flights</label>
         <label><input type="checkbox" id="tripHotel" /> Hotel</label>
-        <label><input type="checkbox" id="tripAllInclusive" /> All-inclusive</label>
+        <label><input type="checkbox" id="tripAI" /> All-inclusive</label>
       </div>
-
-      <label>Notes</label>
-      <textarea id="tripNotes" placeholder="Additional trip info..."></textarea>
-
       <div class="row">
         <label><input type="checkbox" id="tripPublic" /> Public</label>
-        <label><input type="checkbox" id="tripPrivate" /> Private</label>
       </div>
 
-      <button onclick="createTrip()">Create Trip</button>
-      <div id="tripStatus" class="muted"></div>
-      <div id="tripList" class="list"></div>
+      <button id="createTripBtn">Create Trip</button>
+      <span id="tripStatus" class="muted"></span>
     </section>
 
-    <!-- Payment Links -->
     <section class="card">
-      <h2>Payment Links</h2>
-      <label>Label</label>
-      <input id="payLabel" placeholder="e.g. Deposit • Per Person" />
+      <h2>Trips List</h2>
+      <div class="row">
+        <div>
+          <label>Group ID to view</label>
+          <input id="tripListGroupId" placeholder="e.g. g1" />
+        </div>
+        <div style="display:flex; align-items:flex-end">
+          <button id="refreshTripsBtn">Refresh</button>
+        </div>
+      </div>
+      <div id="tripList" class="list"></div>
+    </section>
+  </main>
+
+  <main id="tab-payments" style="display:none">
+    <!-- Payments -->
+    <section class="card">
+      <h2>Add Payment Link</h2>
+      <div class="row">
+        <div>
+          <label>Group ID</label>
+          <input id="payGroupId" placeholder="e.g. g1" />
+        </div>
+        <div>
+          <label>Label</label>
+          <input id="payLabel" placeholder="e.g. Deposit • Per Person" />
+        </div>
+      </div>
       <label>Vendor URL</label>
-      <input id="payVendor" placeholder="https://vendor.com/payment" />
+      <input id="payVendor" placeholder="https://vendor.example.com/pay/abc" />
       <label>Due Date</label>
       <input id="payDue" type="date" />
-      <button onclick="createPayment()">Add Payment Link</button>
-      <div id="payStatus" class="muted"></div>
+      <button id="createPayBtn">Add Payment Link</button>
+      <span id="payStatus" class="muted"></span>
+    </section>
+
+    <section class="card">
+      <h2>Payment Links</h2>
+      <div class="row">
+        <div>
+          <label>Group ID to view</label>
+          <input id="payListGroupId" placeholder="e.g. g1" />
+        </div>
+        <div style="display:flex; align-items:flex-end">
+          <button id="refreshPaysBtn">Refresh</button>
+        </div>
+      </div>
       <div id="payList" class="list"></div>
     </section>
   </main>
 
+  <main id="tab-socials" style="display:none">
+    <!-- Socials -->
+    <section class="card">
+      <h2>Brand Socials</h2>
+      <div class="row">
+        <div>
+          <label>Brand ID</label>
+          <input id="brandId" placeholder="e.g. b1" />
+        </div>
+        <div style="display:flex; align-items:flex-end">
+          <button id="loadBrandBtn">Load</button>
+        </div>
+      </div>
+
+      <label>Facebook URL</label>
+      <input id="fbUrl" placeholder="https://facebook.com/yourpage" />
+      <label>Instagram URL</label>
+      <input id="igUrl" placeholder="https://instagram.com/yourpage" />
+      <label>Twitter/X URL</label>
+      <input id="twUrl" placeholder="https://x.com/yourhandle" />
+      <label>TikTok URL</label>
+      <input id="ttUrl" placeholder="https://tiktok.com/@yourhandle" />
+
+      <button id="saveBrandBtn">Save Socials</button>
+      <span id="brandMsg" class="muted"></span>
+    </section>
+  </main>
+
   <script>
-    const API = "https://travel-app.thebusinessshapeup.workers.dev";
-    const ADMIN_TOKEN = "YOUR_ADMIN_TOKEN_HERE"; // ← replace with your real admin token
-    const GROUP_ID = "g1";
+    // ---------- Small helper: localStorage-backed settings ----------
+    const $ = (id) => document.getElementById(id);
+    const cfg = {
+      get api()   { return $("cfgApi").value.trim(); },
+      get token() { return $("cfgToken").value.trim(); },
+      save() {
+        localStorage.setItem("admin.api", this.api);
+        localStorage.setItem("admin.token", this.token);
+        $("cfgMsg").textContent = "✅ Saved";
+        setTimeout(()=>$("cfgMsg").textContent="", 1500);
+      },
+      load() {
+        $("cfgApi").value   = localStorage.getItem("admin.api")   || "";
+        $("cfgToken").value = localStorage.getItem("admin.token") || "";
+      }
+    };
 
-    async function createTrip() {
-      const body = {
-        group_id: GROUP_ID,
-        title: tripTitle.value.trim(),
-        start_date: Math.floor(new Date(tripStart.value).getTime() / 1000),
-        end_date: Math.floor(new Date(tripEnd.value).getTime() / 1000),
-        has_cruise: tripCruise.checked,
-        has_flights: tripFlights.checked,
-        has_hotel: tripHotel.checked,
-        has_all_inclusive: tripAllInclusive.checked,
-        is_public: tripPublic.checked,
-        notes: tripNotes.value.trim(),
-      };
-      const res = await fetch(`${API}/api/trips`, {
-        method: "POST",
-        headers: {
-          "Authorization": `Bearer ${ADMIN_TOKEN}`,
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify(body)
-      });
-      const j = await res.json();
-      tripStatus.textContent = j.ok ? "✅ Trip created" : `❌ ${j.error}`;
-      loadTrips();
+    // ---------- fetch wrapper (adds headers automatically) ----------
+    async function apiFetch(path, opts={}) {
+      const base = cfg.api.replace(/\/+$/,"");
+      const headers = Object.assign(
+        { "Content-Type": "application/json" },
+        opts.headers || {},
+        cfg.token ? { "Authorization": "Bearer " + cfg.token } : {}
+      );
+      const res = await fetch(base + path, Object.assign({}, opts, { headers }));
+      const ct = res.headers.get("content-type") || "";
+      const body = ct.includes("application/json") ? await res.json() : await res.text();
+      if (!res.ok) throw new Error(typeof body === "string" ? body : (body.error || "Request failed"));
+      return body;
     }
 
+    // ---------- Tabs ----------
+    document.querySelectorAll(".tabBtn").forEach(btn=>{
+      btn.addEventListener("click", ()=>{
+        const id = btn.dataset.tab;
+        document.querySelectorAll("main[id^='tab-']").forEach(m=>m.style.display="none");
+        $("tab-"+id).style.display="block";
+      });
+    });
+
+    // ---------- Settings init ----------
+    cfg.load();
+    $("saveCfgBtn").onclick = cfg.save;
+
+    // ---------- Trips ----------
+    $("createTripBtn").onclick = async () => {
+      $("tripStatus").textContent = "";
+      try {
+        const group_id = $("tripGroupId").value.trim() || "g1";
+        const title = $("tripTitle").value.trim();
+        const start = $("tripStart").value ? Math.floor(new Date($("tripStart").value).getTime()/1000) : null;
+        const end   = $("tripEnd").value   ? Math.floor(new Date($("tripEnd").value).getTime()/1000)   : null;
+        const body = {
+          group_id,
+          title,
+          start_date: start,
+          end_date: end,
+          notes: $("tripNotes").value.trim() || null
+        };
+        // Optional flags only if your DB supports these columns:
+        const flags = {
+          has_cruise: $("tripCruise").checked,
+          has_flights: $("tripFlights").checked,
+          has_hotel: $("tripHotel").checked,
+          has_all_inclusive: $("tripAI").checked,
+          is_public: $("tripPublic").checked
+        };
+        // Try to send flags; if your worker ignores them, no harm done.
+        Object.assign(body, flags);
+
+        const j = await apiFetch("/api/trips", { method:"POST", body: JSON.stringify(body) });
+        $("tripStatus").textContent = "✅ Trip created";
+        await loadTrips();
+      } catch (e) {
+        $("tripStatus").textContent = "❌ " + e.message;
+      }
+    };
+
+    $("refreshTripsBtn").onclick = loadTrips;
     async function loadTrips() {
-      const res = await fetch(`${API}/api/trips?groupId=${GROUP_ID}`);
-      const trips = await res.json();
-      tripList.innerHTML = trips.map(t => `
-        <div class="item">
-          <h3>${t.title}</h3>
-          <span class="pill">${t.is_public ? "Public" : "Private"}</span>
-        </div>
-      `).join("");
+      const gid = $("tripListGroupId").value.trim() || "g1";
+      try {
+        const trips = await apiFetch(`/api/trips?groupId=${encodeURIComponent(gid)}`);
+        $("tripList").innerHTML = trips.map(t => {
+          const start = t.start_date ? new Date(t.start_date*1000).toLocaleDateString() : "TBD";
+          const end   = t.end_date   ? new Date(t.end_date*1000).toLocaleDateString()   : "TBD";
+          const vis   = ("is_public" in t) ? (t.is_public ? "Public" : "Private") : null;
+          return `
+            <div class="item">
+              <div>
+                <h3>${esc(t.title || "Untitled Trip")}</h3>
+                <div class="muted">${esc(start)} — ${esc(end)} ${vis ? ` · <span class="pill">${esc(vis)}</span>` : ""}</div>
+              </div>
+              <div style="display:flex; gap:6px">
+                ${vis!==null ? `<button data-action="toggle" data-id="${t.id}">${t.is_public ? "Make Private" : "Make Public"}</button>` : ""}
+                <button class="danger" data-action="delete" data-id="${t.id}">Delete</button>
+              </div>
+            </div>
+          `;
+        }).join("");
+        // Action handlers
+        $("tripList").querySelectorAll("button").forEach(b=>{
+          const id = b.getAttribute("data-id");
+          const act = b.getAttribute("data-action");
+          if (act==="delete") b.onclick = ()=>deleteTrip(id);
+          if (act==="toggle") b.onclick = ()=>toggleVisibility(id);
+        });
+      } catch (e) {
+        $("tripList").innerHTML = `<div class="item"><div class="err">Failed to load trips: ${esc(e.message)}</div></div>`;
+      }
     }
 
-    async function createPayment() {
-      const body = {
-        label: payLabel.value.trim(),
-        vendor_url: payVendor.value.trim(),
-        due_at: Math.floor(new Date(payDue.value).getTime() / 1000)
-      };
-      const res = await fetch(`${API}/api/groups/${GROUP_ID}/payments`, {
-        method: "POST",
-        headers: {
-          "Authorization": `Bearer ${ADMIN_TOKEN}`,
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify(body)
-      });
-      const j = await res.json();
-      payStatus.textContent = j.ok ? "✅ Payment link added" : `❌ ${j.error}`;
-      loadPayments();
+    async function deleteTrip(id) {
+      if (!confirm("Delete this trip?")) return;
+      try {
+        await apiFetch(`/api/trips/${encodeURIComponent(id)}`, { method:"DELETE" });
+        await loadTrips();
+      } catch (e) {
+        alert("Delete failed: " + e.message);
+      }
     }
 
+    async function toggleVisibility(id) {
+      try {
+        // Fetch current one
+        const t = await apiFetch(`/api/trips/${encodeURIComponent(id)}`);
+        const next = !(!!t.is_public);
+        await apiFetch(`/api/trips/${encodeURIComponent(id)}`, {
+          method:"PUT",
+          body: JSON.stringify({ is_public: next })
+        });
+        await loadTrips();
+      } catch (e) {
+        alert("Toggle failed (ensure your DB has an is_public column): " + e.message);
+      }
+    }
+
+    // ---------- Payments ----------
+    $("createPayBtn").onclick = async () => {
+      $("payStatus").textContent = "";
+      try {
+        const groupId = $("payGroupId").value.trim() || "g1";
+        const body = {
+          label: $("payLabel").value.trim(),
+          vendor_url: $("payVendor").value.trim(),
+          due_at: $("payDue").value ? Math.floor(new Date($("payDue").value).getTime()/1000) : null
+        };
+        const j = await apiFetch(`/api/groups/${encodeURIComponent(groupId)}/payments`, {
+          method:"POST", body: JSON.stringify(body)
+        });
+        $("payStatus").textContent = "✅ Payment link added";
+        await loadPayments();
+      } catch (e) {
+        $("payStatus").textContent = "❌ " + e.message;
+      }
+    };
+
+    $("refreshPaysBtn").onclick = loadPayments;
     async function loadPayments() {
-      const res = await fetch(`${API}/api/groups/${GROUP_ID}/payments`);
-      const payments = await res.json();
-      payList.innerHTML = payments.map(p => `
-        <div class="item">
-          <h3>${p.label}</h3>
-          <a href="${p.vendor_url}" target="_blank" class="pill">Open</a>
-        </div>
-      `).join("");
+      const gid = $("payListGroupId").value.trim() || "g1";
+      try {
+        const items = await apiFetch(`/api/groups/${encodeURIComponent(gid)}/payments`);
+        $("payList").innerHTML = items.map(p => `
+          <div class="item">
+            <div>
+              <h3>${esc(p.label)}</h3>
+              ${p.due_at ? `<div class="muted">Due: ${new Date(p.due_at*1000).toLocaleDateString()}</div>` : ""}
+            </div>
+            <div style="display:flex; gap:6px">
+              <a class="pill" href="${esc(p.vendor_url)}" target="_blank">Open</a>
+              <button class="danger" data-id="${p.id}">Delete</button>
+            </div>
+          </div>
+        `).join("");
+        $("payList").querySelectorAll("button.danger").forEach(b=>{
+          const id = b.getAttribute("data-id");
+          b.onclick = ()=>deletePayment(id, gid);
+        });
+      } catch (e) {
+        $("payList").innerHTML = `<div class="item"><div class="err">Failed to load payments: ${esc(e.message)}</div></div>`;
+      }
     }
 
-    loadTrips();
-    loadPayments();
+    async function deletePayment(paymentId, groupId) {
+      // If you add a DELETE endpoint later, wire it here.
+      alert("Delete not implemented in API yet. Remove duplicates by avoiding re-adding the same label, or add a DELETE route for payment_links.");
+      // Example (if your worker adds it):
+      // await apiFetch(`/api/groups/${encodeURIComponent(groupId)}/payments/${encodeURIComponent(paymentId)}`, { method:"DELETE" });
+      // await loadPayments();
+    }
+
+    // ---------- Socials ----------
+    $("loadBrandBtn").onclick = loadBrand;
+    $("saveBrandBtn").onclick = saveBrand;
+
+    async function loadBrand() {
+      $("brandMsg").textContent = "";
+      const id = $("brandId").value.trim() || "b1";
+      try {
+        const data = await apiFetch(`/api/brands/${encodeURIComponent(id)}/socials`, { method:"GET" });
+        $("fbUrl").value = data.facebook_url || "";
+        $("igUrl").value = data.instagram_url || "";
+        $("twUrl").value = data.twitter_url || "";
+        $("ttUrl").value = data.tiktok_url || "";
+        $("brandMsg").textContent = "✅ Loaded";
+      } catch (e) {
+        $("brandMsg").textContent = "❌ " + e.message;
+      }
+    }
+
+    async function saveBrand() {
+      $("brandMsg").textContent = "";
+      const id = $("brandId").value.trim() || "b1";
+      try {
+        const body = {
+          facebook_url: $("fbUrl").value.trim() || null,
+          instagram_url: $("igUrl").value.trim() || null,
+          twitter_url: $("twUrl").value.trim() || null,
+          tiktok_url: $("ttUrl").value.trim() || null
+        };
+        await apiFetch(`/api/brands/${encodeURIComponent(id)}/socials`, {
+          method:"POST", body: JSON.stringify(body)
+        });
+        $("brandMsg").textContent = "✅ Saved";
+      } catch (e) {
+        $("brandMsg").textContent = "❌ " + e.message;
+      }
+    }
+
+    // ---------- utils ----------
+    function esc(s) {
+      return String(s ?? "").replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
+    }
+
+    // ---------- initial load ----------
+    (async function init() {
+      // preload defaults to speed you up
+      if (!$("tripListGroupId").value) $("tripListGroupId").value = "g1";
+      if (!$("payListGroupId").value)  $("payListGroupId").value  = "g1";
+      if (!$("tripGroupId").value)     $("tripGroupId").value     = "g1";
+      if (!$("payGroupId").value)      $("payGroupId").value      = "g1";
+      if (!$("brandId").value)         $("brandId").value         = "b1";
+      // Try initial loads (won’t work until you set API + token)
+      try { await loadTrips(); } catch {}
+      try { await loadPayments(); } catch {}
+    })();
   </script>
 </body>
+
 </html>
