--- a/admin/index.html
+++ b/admin/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <div style="padding:10px; background:yellow;">DEPLOY TEST</div>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TripStack Admin</title>
